--- a/talks/2017.03.01/index.Rmd
+++ b/talks/2017.03.01/index.Rmd
@@ -69,7 +69,7 @@ In a nutshell the L1T O2O is a CMSSW job wrapped in series of scripts ([slide 5]
 ## New L1T O2O features
 
 O2O can be ran on lxplus provided you have the DB access token (great for testing!):
-* <span style="font-family:monospace">./runL1-O2O-iov.sh 285832 collisions2016_TSC/v206 collisions2016_RS/v291</span>
+* <span style="font-family:monospace;font-size:smaller">./runL1-O2O-iov.sh 285832 collisions2016_TSC/v206 collisions2016_RS/v291</span>
 
 Splitting a monolithic job in a [sequence per-payload jobs](https://github.com/cms-sw/cmssw/blob/CMSSW_9_0_X/L1TriggerConfig/Utilities/test/runOneByOne.sh) doubles running time (13s $\rightarrow$ 25s)
 * for per-payload monitoring I'd prefer mimicking multiple jobs by splitting logs of one job
@@ -144,11 +144,11 @@ Besides L1TMenu and prescales/vetos following tags need to be aggregated by Glob
 A special case:
 
 <span style="font-weight:bold;color:brown">CALO:</span>
-[L1TCaloParams_Stage2v0_hlt_HI2016](https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016) - fully validated tag for Heavy Ions 
-and end-of-2016 $pp$ runs, e.g.:
+[L1TCaloParams_Stage2v0_hlt_HI2016](https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016) - fully validated tag for 
+the end-of-2016 runs ($pp$, HI) e.g.:
 
-[e/gamma ET](EgEt.pdf)
-[e/gamma eta](EgEta.pdf)
+[e/gamma ET](EgEt.pdf), 
+[e/gamma eta](EgEta.pdf),
 [e/gamma phi](EgPhi.pdf)
 
 (sorry for the pdf format)
