--- a/talks/2017.03.01/index.Rmd
+++ b/talks/2017.03.01/index.Rmd
@@ -156,10 +156,13 @@ end-of-2016 runs ($pp$, HI):
 --- .class #id
 
 
-## Clibration constants
+## Re-emulation of L1T
 
-Running 
-[https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com
+* Emulation of L1T is available through a L1T:REPACK step, known to cmsDriver.py command. 
+  * L1REPACK:FullSimTP: Full emulation of L1T starting with unpacked DIGIs, first re-simulate TPs and then emulating L1T. Inputs to the L1T emulation are in most cases the re-simulated TPs. Those include simEcalTPs and simHcalTPs used by simCaloLayer1, and simDtTPs used by simTwinMux and simBmtf. The exceptions are the unpacked RpcTPs and CscTPs (fromEMTF) which are used for simOmtf and simEmtf. INPUT = Stage2 real data (eg, 2016 real data). One would use this if new detector calibrations are available, which in turn affect the TPs. In this case TPs need to be simulated from upacked detector DIGIs. 
+
+* More options and details on the
+[twiki](https://twiki.cern.ch/twiki/bin/view/CMSPublic/SWGuideL1TStage2Instructions#L1REPACK_step_with_cmsDriver_com)
 
 --- .class #id
 
