--- a/talks/2017.03.01/index.Rmd
+++ b/talks/2017.03.01/index.Rmd
@@ -146,10 +146,7 @@ A special case yet to be uploaded to the CondDB:
 <span style="font-weight:bold;color:brown">CALO:</span>
 [L1TCaloParams_Stage2v0_hlt](https://cms-conddb.cern.ch/cmsDbBrowser/list/Prod/tags/L1TCaloParams_Stage2v0_hlt_HI2016) - fully validated tag for 
 end-of-2016 runs ($pp$, HI):
-* comparison of raw data vs. emulator configured from O2O:
-[e/gamma ET](EgEt.pdf), 
-[e/gamma eta](EgEta.pdf),
-[e/gamma phi](EgPhi.pdf)
+* comparison of raw data vs. emulator configured from O2O: e/$\gamma$ [ET](EgEt.pdf), [eta](EgEta.pdf), [phi](EgPhi.pdf)
 
 (sorry for the pdf format)
 
